--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+.body {
+  background-color: rgb(16, 16, 16);
+}
+.main-container {
+ background-color: rgb(16, 16, 16);
+}
 @layer components {
   /* main */
   .main-container {
-    @apply flex min-h-screen flex-1 flex-col items-center bg-dark-1 px-6 pb-10 pt-28 max-md:pb-32 sm:px-10;
+    @apply flex min-h-screen flex-1 flex-col items-center px-6 pb-10 pt-28 max-md:pb-32 sm:px-10;
   }
 
   /* Head Text */
